...
            "tab.home"
        case .calendar:
            "tab.calendar"
        case .todo:
            "tab.todo"
        case .team:
            "tab.team"
        case .more:
            "tab.more"
        }
    }

    nonisolated var localizedTitle: String {
...
